# DealSignal-AI-In-The-Wild

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  run_pipeline.py
azure_artifacts/: deploy.sh
config/: watchlist.yaml
dealsignal/: __init__.py
dealsignal/agents/: tinyfish_provider.py  web_provider.py
dealsignal/app/: main.py  routes.py
dealsignal/models/: __init__.py  company.py  database.py  source.py
dealsignal/pipeline/: discover.py  extract.py  fetch.py
product_iterations/: README.md  v0.md  v1.md  v2.1-evals.md  v2.md
serve/: .dockerignore  README.md  main.py  pyproject.toml  requirements.txt  run_pipeline.py
serve/config/: source_policy.yaml  watchlist.yaml
serve/dealsignal/: state_sync.py
serve/dealsignal/agents/: __init__.py  basic_provider.py  tinyfish_provider.py  web_provider.py
serve/dealsignal/app/: routes.py
serve/dealsignal/app/templates/: admin.html  base.html  companies.html  company_detail.html  evals.html  event_detail.html  index.html  opportunities.html
serve/dealsignal/models/: __init__.py  company.py  company_narrative.py  database.py  lead_score.py  narrative_delta.py  opportunity_eval.py  pipeline_run.py  scoring_config.py  signal_event.py
serve/dealsignal/pipeline/: __init__.py  config.py  digest.py  discover.py  evals.py  extract.py  fetch.py  lead_score.py  narrative.py  score.py
serve/tests/: test_evals.py  test_feed_curation.py  test_lead_score.py  test_narrative.py  test_score.py
tests/: test_deduplication.py  test_fingerprint.py
(+3 files in other folders)
